--- a/tugas 2/tugas2.html
+++ b/tugas 2/tugas2.html
@@ -18,6 +18,8 @@
                     we are a company that makes and distributes delicious drinks. our main product is made with a secret
                     recipe and available in stores worldwide.
                 </span>
+                <p></p>
+                <button class="tombol-offer"> Get your coffe</button>
             </div>
         </div>
         <div class="header">
@@ -25,6 +27,158 @@
             </div>
         </div>
 
+    </div>
+    <div class="container">
+        <div class="content">
+            <h4>Special menu <u>for you</u></h4>
+            <div class="product-lists">
+                <div class="product">
+                    <div>
+                        <p class="rating">4.8 <img src="assets/Icons/gold-star.svg"/></p>
+                        <img src="assets/Images/product-4.png"/>
+                    </div>
+                    <div class="text-product">
+                        <div class="product-left">
+                            <div>
+                                <h5>Sandwich</h5>
+                            </div>
+                            <div>
+                               <span class="product-info">Bread with meat and Vegetables</span>
+                            </div>
+                        </div>
+                        <div class="product-right">
+                            <div>
+                                <h5>12k</h5>
+                            </div>
+                            <div class="cart">
+                                <img src="assets/Icons/dark-cart.svg"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div>
+                        <p class="rating">4.8 <img src="assets/Icons/gold-star.svg"/></p>
+                        <img src="assets/Images/product-4.png"/>
+                    </div>
+                    <div class="text-product">
+                        <div class="product-left">
+                            <div>
+                                <h5>Sandwich</h5>
+                            </div>
+                            <div>
+                               <span class="product-info">Bread with meat and Vegetables</span>
+                            </div>
+                        </div>
+                        <div class="product-right">
+                            <div>
+                                <h5>12k</h5>
+                            </div>
+                            <div class="cart">
+                                <img src="assets/Icons/dark-cart.svg"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div>
+                        <p class="rating">4.8 <img src="assets/Icons/gold-star.svg"/></p>
+                        <img src="assets/Images/product-4.png"/>
+                    </div>
+                    <div class="text-product">
+                        <div class="product-left">
+                            <div>
+                                <h5>Sandwich</h5>
+                            </div>
+                            <div>
+                               <span class="product-info">Bread with meat and Vegetables</span>
+                            </div>
+                        </div>
+                        <div class="product-right">
+                            <div>
+                                <h5>12k</h5>
+                            </div>
+                            <div class="cart">
+                                <img src="assets/Icons/dark-cart.svg"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div>
+                        <p class="rating">4.8 <img src="assets/Icons/gold-star.svg"/></p>
+                        <img src="assets/Images/product-7.png"/>
+                    </div>
+                    <div class="text-product">
+                        <div class="product-left">
+                            <div>
+                                <h5>Cappucino</h5>
+                            </div>
+                            <div>
+                               <span class="product-info">Hot cappucino</span>
+                            </div>
+                        </div>
+                        <div class="product-right">
+                            <div>
+                                <h5>12k</h5>
+                            </div>
+                            <div class="cart">
+                                <img src="assets/Icons/dark-cart.svg"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div>
+                        <p class="rating">4.8 <img src="assets/Icons/gold-star.svg"/></p>
+                        <img src="assets/Images/product-8.png"/>
+                    </div>
+                    <div class="text-product">
+                        <div class="product-left">
+                            <div>
+                                <h5>Moccacino</h5>
+                            </div>
+                            <div>
+                               <span class="product-info">Hot moccacino</span>
+                            </div>
+                        </div>
+                        <div class="product-right">
+                            <div>
+                                <h5>12k</h5>
+                            </div>
+                            <div class="cart">
+                                <img src="assets/Icons/dark-cart.svg"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div>
+                        <p class="rating">4.8 <img src="assets/Icons/gold-star.svg"/></p>
+                        <img src="assets/Images/product-9.png"/>
+                    </div>
+                    <div class="text-product">
+                        <div class="product-left">
+                            <div>
+                                <h5>Waffle ice cream</h5>
+                            </div>
+                            <div>
+                               <span class="product-info">Waffle with ice cream</span>
+                            </div>
+                        </div>
+                        <div class="product-right">
+                            <div>
+                                <h5>12k</h5>
+                            </div>
+                            <div class="cart">
+                                <img src="assets/Icons/dark-cart.svg"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
     </div>
 </body>
 
