--- a/tugas 2/tugas2.html
+++ b/tugas 2/tugas2.html
@@ -59,15 +59,15 @@
                 <div class="product">
                     <div>
                         <p class="rating">4.8 <img src="assets/Icons/gold-star.svg"/></p>
-                        <img src="assets/Images/product-4.png"/>
+                        <img src="assets/Images/product-5.png"/>
                     </div>
                     <div class="text-product">
                         <div class="product-left">
                             <div>
-                                <h5>Sandwich</h5>
+                                <h5>Hot milk</h5>
                             </div>
                             <div>
-                               <span class="product-info">Bread with meat and Vegetables</span>
+                               <span class="product-info">Hot milk with less sugar</span>
                             </div>
                         </div>
                         <div class="product-right">
@@ -83,15 +83,15 @@
                 <div class="product">
                     <div>
                         <p class="rating">4.8 <img src="assets/Icons/gold-star.svg"/></p>
-                        <img src="assets/Images/product-4.png"/>
+                        <img src="assets/Images/product-6.png"/>
                     </div>
                     <div class="text-product">
                         <div class="product-left">
                             <div>
-                                <h5>Sandwich</h5>
+                                <h5>Coffe ice cream</h5>
                             </div>
                             <div>
-                               <span class="product-info">Bread with meat and Vegetables</span>
+                               <span class="product-info">Coffe with ice cream</span>
                             </div>
                         </div>
                         <div class="product-right">
