--- a/tugas 3/tugas3.html
+++ b/tugas 3/tugas3.html
@@ -1,13 +1,31 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+  <link href="./src/output.css" rel="stylesheet">
 </head>
+
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  <div class="container">
+    <div class="header">
+      <div class="relative">
+        
+          <p class="text-2xl">What they say about us</p>
+          <p class="text-xs mt-10 pt-10">We always provide The best service and always maintain the quality of coffe
+          </p>
+        
+      </div>
+    </div>
+    <!-- Subscribe --> 
+    <div class="bg-black">
+      <div class="mx-auto max-w-screen-md sm:text-center">
+        <h2 class="mb-4 text-3xl tracking-tight font-extrabold text-gray-900 sm:text-4xl dark:text-white">Sign up for our newsletter</h2>
+      </div>  
+    </div>
+  </div>
+ 
 </body>
+
 </html>
